# Tslz

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
config/: README.md  default.yaml  theme.yaml
dashboard/: README.md  rxconfig.py
dashboard/assets/: graph.html  live_chart.html  trading_chart.html
dashboard/dashboard/: __init__.py  dashboard.py  state.py
data/: .gitkeep
deploy/: README.md  hynous.service  nous.service  setup.sh
docs/: README.md
nous-server/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
nous-server/core/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
nous-server/server/: package.json  tsconfig.json
revisions/: README.md  revision-exploration.md
revisions/MF0/: audit-notes.md  implementation-guide.md  solved.md
revisions/MF12/: audit-notes.md  implementation-guide.md  solved.md
revisions/MF13/: audit-notes.md  implementation-guide.md  solved.md
revisions/MF15/: audit-notes.md  implementation-guide.md  solved.md
revisions/graph-changes/: cluster-visualization.md
revisions/memory-pruning/: implementation-guide.md
revisions/memory-search/: design-plan.md  implementation-guide.md
revisions/nous-wiring/: executive-summary.md  more-functionality.md  nous-wiring-revisions.md
revisions/token-optimization/: TO-1-dynamic-max-tokens.md  (+4 more)
scripts/: README.md  __init__.py  run_daemon.py  run_dashboard.py  run_webhook.py
tests/: README.md  __init__.py  conftest.py
(+257 files in other folders)
