[project]
name = "hynous"
version = "0.1.0"
description = "Personal equities/options intelligence system with autonomous LLM trading agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "David" }
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # LLM
    "litellm>=1.0.0",
    "anthropic>=0.40.0",  # Used by litellm for Anthropic provider

    # Dashboard
    "reflex>=0.6.0",

    # Database
    "aiosqlite>=0.19.0",

    # Data
    "hyperliquid-python-sdk>=0.1.0",
    "alpaca-py>=0.23.0",
    "yfinance>=0.2.0",

    # Async
    "aiohttp>=3.9.0",

    # Webhook server
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hynous"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled separately

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
